added deleteCity and loader

--- a/src/scss/variables.scss
+++ b/src/scss/variables.scss
@@ -4,9 +4,7 @@ $color-black: #333333;;
 $colour-secondary: rgba(137, 129, 166, 0.97);
 $color-white: #fff;
 $background-color: linear-gradient(180deg, rgba(187, 168, 222, 0.50) 0%, rgba(250, 240, 246, 0) 100%);
-//$color-meta: gray;
-//$color-danger: #dc3545;
-//$color-danger-highlight: #c82333;
+$color-error: #dc3545;
 
 $border-width: 1px;
 $border-radius: 8px;
